always show scrollbar to avoid jumping

--- a/content/style.css
+++ b/content/style.css
@@ -1,3 +1,7 @@
+body {
+	overflow-y: scroll;
+}
+
 .conversation__header {
 	position: fixed;
 	top: 0;
